--- a/style.css
+++ b/style.css
@@ -245,3 +245,41 @@ section {
     font-size: 6rem;
     font-weight: 300;
 }
+
+.menu .box-container {
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(rem, 1fr));
+    gap: 1.5rem
+}
+.menu .box-container .box{
+    padding: 10rem;
+    text-align: center;
+    border: var(--border)
+}
+.menu .box-container .box img{
+    height: 150rem;
+}
+.menu .box-container .box h3{
+    color: #fff;
+    font-size: 5rem;
+    padding: 1rem 0;
+}
+.menu .box-container .box .price {
+    color: #fff;
+    font-size: 4rem;
+    padding: 0.5rem 0;
+}
+.menu .box-container .box .price {
+    
+    font-size: 4rem;
+    padding: 0.5rem 0;
+    text-decoration: line-through;
+    font-weight: lighter;  
+}
+
+.menu .box-container .box:hover{
+   background: #fff;
+}
+.menu .box-container .box:hover >*{
+    color: var(--black);
+}
