--- a/style.css
+++ b/style.css
@@ -429,9 +429,62 @@ section {
 .contact .row form .inputBox input {
   width: 100%;
   padding: 1.5rem;
-  font-size: 3.5rem;
+  font-size: 5rem;
   color: #fff;
   background: none;
   border: none;
   outline: none;
+}
+
+.blogs .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.blogs .box-container .box {
+  text-align: center;
+  border: var(--border);
+  padding: 2rem;
+  background: var(--black); /* optional for clean look */
+  border-radius: 0.8rem; /* optional: smooth corners */
+  overflow: hidden;
+}
+
+.blogs .box-container .box .image {
+  width: 100%;
+  aspect-ratio: 1 / 1;  /* forces square box */
+  overflow: hidden;
+  border-radius: 0.8rem;
+}
+
+.blogs .box-container .box .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* keeps image proportional */
+  transition: transform 0.4s ease-in-out;
+}
+
+.blogs .box-container .box:hover .image img {
+  transform: scale(1.2);
+}
+
+.blogs .box-container .box-content {
+    padding: 2rem;
+    align-items: center;
+}
+.blogs .box-container .box .content  .title {
+    font-size: 4rem;
+    color: #fff;
+    line-height: 1.5;
+}
+.blogs .box-container .box .content .title:hover {
+    color: var(--main-color);
+}
+.blogs .box-container .box .content span {
+    color: var(--main-color);
+    font-size: 3.5rem;
+    padding: 1rem 0;
+    display: block;
+    align-items: center;
 }
