--- a/style.css
+++ b/style.css
@@ -488,3 +488,17 @@ section {
     display: block;
     align-items: center;
 }
+.blogs .box-container .box .content p {
+    font-size: 3.5rem;
+    color: #fff;
+    line-height: 1.8;
+    padding: 1rem 0;
+    align-items: center;
+}
+.blogs .box-container .box .content .btn {
+    font-size: 3.5rem;
+    padding: 1rem 3rem;
+    align-items: center;
+} 
+
+
