--- a/style.css
+++ b/style.css
@@ -501,4 +501,66 @@ section {
     align-items: center;
 } 
 
+footer {
+    background: var(--black);
+    text-align: center;
+    border-top: var(--border);
+    padding: 3rem 7%;
+    margin-top: 5rem;
 
+
+}
+footer .share {
+    padding: 1rem 0;
+
+}
+footer .share a {
+    height: 10rem;
+    width: 10rem;
+    line-height: 9rem;
+    font-size: 6rem;
+    color: #fff;
+    border: var(--border);
+    margin: 0 0.3rem;
+    border-radius: 50%;
+}
+footer .share a:hover {
+    background: var(--main-color);
+    color: var(--black);
+}
+footer .links {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
+}
+footer .links a {
+    padding: 0.10rem 2rem;
+    color: #fff;
+    border: var(--border);
+    font-size: 5.5rem;
+}
+footer .links a:hover {
+    background: var(--main-color);
+    
+}
+.footer .credit {
+    color: #fff;
+    font-size: 4rem;
+    padding-top: 2rem;
+}
+
+
+footer .credit {
+  margin-top: 2rem;
+  font-size: 3rem;
+  color: #fff; /* Soft gray */
+  letter-spacing: 0.5px;
+}
+
+footer .credit span {
+  color: var(--main-color); /* Highlighted accent (like coffee gold) */
+  font-weight: 600;
+  transition: color 0.3s ease;
+}
