donr the js part

--- a/style.css
+++ b/style.css
@@ -654,5 +654,33 @@ footer .credit span {
 }
 
 .home .content p{
-    font-size: 1.5rem;
+    font-size: 5rem;
+}
+
+@media (max-width: 768px) {
+  #menu-btn {
+    display: inline-block; /* show menu button on small screens */
+  }
+
+  .header .navbar {
+    position: absolute;
+    top: 100%;
+    right: -100%; /* hidden offscreen */
+    background: #fff;
+    width: 30rem;
+    height: calc(100vh - 9rem);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+  }
+
+  .header .navbar.active {
+    right: 0; /* slide into view */
+  }
+
+  .header .navbar a {
+    color: var(--black);
+    margin: 1.5rem 0;
+    font-size: 2.5rem;
+  }
 }
